docker-wine-separate-2-k8s-deployment.3.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: wine-separate-2-deployment
  labels:
    app: wine-separate-2
spec:
  replicas: 1
  selector:
    matchLabels:
        app: wine-separate-2
  template:
    metadata:
      labels:
        app: wine-separate-2
    spec:
      securityContext:
        fsGroup: 1010
      containers:
      - name: solarkennedy-wine-x11-novnc-docker
        image: launchthatbrand/solarkennedy-wine-x11-novnc-docker:latest
        imagePullPolicy: Always
        securityContext:
          runAsUser: 0
      - name: nevmerzhitsky-headless-metatrader4
        image: launchthatbrand/nevmerzhitsky-headless-metatrader4:minimal-1.0.5
        imagePullPolicy: Always
        command: [ "/bin/bash", "-c", "--" ]
        args: [ "while true; do sleep 30; done;" ]
        volumeMounts:
        - name: wine-separate-2-volume
          mountPath: /home/winer/.wine/
      volumes:
      - name: wine-separate-2-volume
        persistentVolumeClaim:
          claimName: wine-separate-2-pvc
