docker-wine-separate-2-k8s-deployment.1.yaml
apiVersion: v1 
kind: Service
metadata:
  name: wine-separate-2-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    name: wine-separate-2-novnc
  - port: 5900
    protocol: TCP
    name: wine-separate-2-vnc
    nodePort : 30387
  selector:
    app: wine-separate-2
  type: NodePort
