docker-wine-separate-k8s-deployment.1.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: "default-123456-separate"
  labels:
    app: "default-123456-separate"
    client: "default-123456"
spec:
  selector:
    matchLabels:
      app: "default-123456-separate"
      client: "default-123456"
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: "default-123456-separate"
        client: "default-123456"
    spec:
      containers:
      - name: wine
        image: suchja/wine
      - name: suchja-x11server
        image: suchja/x11server
        ports:
        - name: x11server
          containerPort: 6000
      volumes:
      - name: default-123456-separate
        persistentVolumeClaim:
          claimName: default-123456-separate
---
apiVersion: v1
kind: Service
metadata:
  name: "default-123456-separate"
  labels:
    app: "default-123456-separate"
    client: "default-123456"
spec:
  ports:
  - port: 5900
    protocol: TCP
    targetPort: 5900
  selector:
    app: "default-123456-separate"
    client: "default-123456"
  type: NodePort
