docker-wine-separate-k8s-service-pvc-rdp.yaml
apiVersion: v1 
kind: Service
metadata:
  name: "$Username-$brand-$product-$random-$i"
  labels:
    user: "$Username"
    client: "$brand"
    app: "$product"
    id: "$random-$i"
spec:
  ports:
  #- port: 8080
  #  protocol: TCP
  #  name: "$Username-$random-novnc"
  #- port: 5900
  #  protocol: TCP
  #  name: "$Username-$random-vnc"
  - port: 3389
    protocol: TCP
    name: "$Username-$random-rdp"
  selector:
    user: "$Username"
    client: "$brand"
    app: "$product"
    id: "$random-$i"
  type: NodePort
