docker-wine-separate-k8s-service-pvc.yaml
apiVersion: v1 
kind: Service
metadata:
  name: "$Username-$random-docker-wine"
  labels:
    app: "$Username-$random-docker-wine"
    client: "$Username-$random"
spec:
  ports:
  - port: 8080
    protocol: TCP
    name: "$Username-$random-novnc"
  - port: 5900
    protocol: TCP
    name: "$Username-$random-vnc"
    # nodePort : 30380
  selector:
    app: "$Username-$random-docker-wine"
    client: "$Username-$random"
  type: NodePort
