10-app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tyler-lvrg-type-m-v8-asdfhdsf-1
  namespace: lvrg-customers
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    #nginx.ingress.kubernetes.io/app-root: /guacamole
spec:
  tls:
  - hosts:
    - sc6rffd3d5.netboot.fr
    secretName: guacamole-netboot-fr-tls
  rules:
  - host: tyler-lvrg-type-m-v8-asdfhdsf-1.lvrgtrading.com
    http:
      paths:
      - path: /
        backend:
          serviceName: tyler-lvrg-type-m-v8-asdfhdsf-1
          servicePort: 5900
